back to not using the cosine.